# TradingResultsParser

./: .env.sample  .gitignore  README.md  config.py  main.py  pyproject.toml
adapters/: orm.py
domain/: model.py
service_layer/: data_parser.py  links_parser.py  parser.py  results_generator.py  tr_generator.py  utils.py
