[tool.poetry]
name = "trading-results-parser"
version = "0.1.0"
description = ""
authors = ["anna putilovskaya <putilovskayaam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.13.3"
pandas = {extras = ["excel"], version = "^2.2.3"}
asyncpg = "^0.30.0"
aiohttp = "^3.11.13"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
